# chess-reboot

./: .gitignore  001-Engine.md  001-FEN.md  002-Code splitting.md  003-Movement stack.md  004-Current Flow.md  005-Brainrot.md  006-Goblin broke.md  007-Display.md  008-Build.md  Build.sh  Cargo.toml  README.md
.claude/: launch.json  settings.local.json
api/: 001-API architecture.md  Cargo.toml
api/src/: main.rs
engine/: Cargo.toml
engine/src/: lib.rs  main.rs
engine/tests/: fairy_scenarios.rs  perft.rs  properties.proptest-regressions  properties.rs  standard_game.rs
frontend/dev/: .gitignore  index.html  main.ts  package-lock.json  styles.css  tsconfig.json
frontend/vite-dev/: editor.html  index.html  package-lock.json  package.json
piece_ideas/: README.md
piece_ideas/baba_is_you/: README.md  conjunction_and.md  copula_is.md  global_local_toggle.md  modifier_not.md  predicate_wall.md  predicate_you.md  quote_bracket.md  subject.md
piece_ideas/classical_composition/: README.md  antiphon.md  eclipse.md  helix.md  kaddish.md  pilgrim.md  recursion.md  solstice.md  tithe.md
piece_ideas/claude_first_brainstorm/: README.md  architect.md  bomb.md  conductor.md  dancer.md  engineer.md  magnet.md  mirror.md  quantum.md  reanimator.md  sniper.md  vampire.md
plans/: 01-turn-system.md  02-king-safety.md  03-standard-chess-completeness.md  04-custom-piece-spec-gaps.md  05-fen-hardening.md  06-api-evolution.md  07-testing-strategy.md  08-signal-substrate.md  09-trains.md  10-movement-stack.md  11-duck-chess.md  12-block-square.md  13-tornado.md  README.md
(+138 files in other folders)
