[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }

engine = { path = "../engine" }
tower-http = { version = "0.6.8", features = ["cors"] }
http = "1.4.0"
